[package]
name = "async-bb8-diesel"
description = "async bb8 connection manager for Diesel"
version = "0.2.1"
authors = ["Sean Klein <sean@oxide.computer>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/oxidecomputer/async-bb8-diesel"
keywords = ["diesel", "r2d2", "pool", "tokio", "async"]

[features]
# Enables CockroachDB-specific functions.
cockroach = []
default = [ "cockroach" ]

[dependencies]
bb8 = "0.8"
async-trait = "0.1.89"
diesel = { version = "2.3.4", default-features = false, features = [ "r2d2" ] }
futures = "0.3"
thiserror = "2.0"
tokio = { version = "1.32", default-features = false, features = [ "rt-multi-thread" ] }

[dev-dependencies]
anyhow = "1.0"
crdb-harness = "0.0.2"
diesel = { version = "2.3.4", features = [ "postgres", "r2d2" ] }
libc = "0.2.178"
tempfile = "3.8"
tokio = { version = "1.32", features = [ "macros", "fs", "process" ] }
tokio-postgres = { version = "0.7", features = [ "with-chrono-0_4", "with-uuid-1" ] }
